--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,10 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
 nav{
     display: flex;
-   
+   margin: 0px 200px ;
     justify-content: space-between;
 }
 body{
@@ -17,6 +21,7 @@ body{
     color: white;
     font-weight: 700;
     padding: 11px 20px ;
+   margin-right: 20px;
 }
 
 .nav-title{
@@ -35,4 +40,82 @@ nav li{
 nav a{
     text-decoration: none;
     color: gray;
+}
+
+/* header related */
+.header-class{
+    background: #FFF8F3;
+    background-image:url('../images/header_bg.png') ;
+    background-repeat: no-repeat;
+    background-position: bottom right ;
+    
+}
+.banner{
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.banner-content{
+    max-width: 500px;
+
+}
+.dp{
+    width: 500px;
+}
+.banner-greet{
+    font-size: 45px;
+    color:  #403a3a;
+    margin-bottom: 0px;
+}
+.banner-title{
+    font-size: 85px;
+margin-top: 5px;
+margin: bottom 25px; ;
+font-weight: 700;
+}
+.banner-des{
+    margin-top: 35px;
+    margin-bottom: 20px;
+}
+
+/* main section */
+main{
+    max-width: 1140px;
+  margin: 0 auto;
+}
+/* about section */
+.about{
+    border-radius: 10px;
+    background: #FFF8F3;
+    padding: 132px;
+    margin-top: 140px ;
+}
+.section-titie{
+    color: #621c2e;
+text-align: center;
+font-size: 35px;
+font-weight: 700;
+}
+.sec-des{
+    color: #575454;
+    text-align: center;
+    font-size: 18px;
+
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+.info-title{
+    font-weight: lighter;
+    margin-bottom: 5px;
+    font-weight: normal;
+}
+
+
+.info-description{
+    font-size: 18px;
+    text-align: center;
 }
