--- a/style/style.css
+++ b/style/style.css
@@ -129,7 +129,7 @@ margin-bottom: 40px;
     text-align: center;
     font-size: 35px;
     font-weight: 700;
-    margin-top: 30px;
+    margin-top: 60px;
 }
 
 .skills-con{
@@ -153,5 +153,29 @@ box-shadow: 0px 6px 50px 0px rgba(74, 63, 63, 0.436);
     color: #0f0e0e;
 font-size: 30px;
 font-weight: 700;
+margin-bottom: 40px;
 }
 
+.resume-con{
+    display: flex;
+    gap: 50px;
+    margin-top: 45px;
+    padding-top: 30px;
+
+}
+
+.resume-item-ins, .resume-item-des{
+    color: #430505;
+font-size: 17px;
+font-weight: 400;
+line-height: 28px;
+}
+.resume-item-ins{
+    margin-bottom: 7px;
+    font-size: 20px;
+    color: rgb(155, 95, 5);
+}
+.download-cv{
+    text-align: center;
+    margin-top: 60px;
+}
